  (task #11316)
* core: fix display of wide chars on last column of chat area (patch #7733)
* api: display warning in scripts when invalid pointers (malformed strings) are
  given to plugin API functions (warning displayed if debug for plugin is >= 1)
* api: add list "gui_buffer_last_displayed" in hdata "buffer"
* guile: add missing function "hook_process_hashtable" in API
* irc: allow more than one nick in command /invite
* irc: do not send command "MODE #channel" on manual /names (do it only when
  names are received on join of channel) (bug #35930)
* irc: do not allow the creation of two servers with same name but different
  case (fix error when writing file irc.conf) (bug #35840)
* irc: update away flag for nicks on manual /who
* irc: display privmsg messages to "@#channel" and "+#channel" in channel buffer
  (bug #35331)
* irc: fix redirection of message when message is queued for sending on server
* irc: add signals and tags in messages for irc notify (task #11887)
* irc: check notify immediately when adding a nick to notify list, improve
  first notify message for a nick (bug #35731)
* irc: fix display of color in hostname (join/part/quit messages)
* irc: compute hash to find nick color for nick in server message when nick
  is not in nicklist
* irc: add support of "external" SASL mechanism (task #11864)
* irc: close server buffer when server is deleted
* irc: add search for lower case nicks in option irc.look.nick_color_force
* relay: redirect some irc messages from clients to hide output (messages: mode,
  ison, list, names, topic, who, whois, whowas, time, userhost) (bug #33516)
* relay: add "date_printed" and "highlight" in signal "_buffer_line_added"
  (WeeChat protocol)
* rmodifier: add option "release" in default rmodifier "nickserv" (used to hide
  passwords in command "/msg nickserv") (bug #35705)
* tcl: add missing function "hdata_char" in API
* tcl: fix pointer sent to function hook_signal_send when type of data is
  a pointer
